2009-02-15  Hans Breuer  <hans@breuer.org>

	[warningectomy - not sure where I've counted the 30;) ]
	* lib/diarenderer.c : fix constness to produce no warnings anymore
	* lib/diagdkrenderer.c : pointer targets ... differ in signedness
	* objects/chronogram/chronoline_event.c : dereferencing type-punned 
	pointer will break strict-aliasing rules
	* objects/Misc/measure.c : object_menu() now returning NULL, see below
	* objects/Database/table_dialog.c : use GPOINTER_TO_UINT to avoid
	warning: cast from pointer to integer of different size
	* lib/object_defaults.c objects/FS/flow.c : use GPOINTER_TO_INT()
	* lib/sheet.c : use GINT_TO_POINTER()
	* lib/object.c : use GPOINTER_TO_UINT()
	* plug-ins/wmf/wmf.cpp : explicit accept int precision for margins
	* plug-ins/xslt.c : pointer targets ... differ in signedness

	* app/disp_callbacks.c : allow obj->ops->get_object_menu() return NULL
	  objects/standard/outline.c : use it for outline_get_object_menu

	* app/disp_callbacks.c : make empty_menu a really empty DiaMenu with
	menu_items==0 to avoid superfluous separators (bug #532534)
	(ddisplay_canvas_events) : warning - integral size mismatch in argument

2009-02-14  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/scascale.py : check input feasibility, bug #440884

	* app/preferences.[ch] app/display.c : allow to configure the initial
	mainpoint magnetism, aka. "Snap to Object", bug #571724

	* app/diagram.c(diagram_load_into) : cleanup to remember the original
	path of an import file (bug #570862) and also avoid to not simply save
	the newly created diagram without asking for confirmation of the 
	filename. Also reflect the filename in the window title.

	* plug-ins/wmf/wmf_gdi.h : define LPCWSTR type, bug #571125

2009-02-08  Hans Breuer  <hans@breuer.org>

	[warningectomy - about 30 left]
	* configure.in : disable -Wunused, add a lot more useful, see:
	http://blogs.gnome.org/otte/2008/12/22/warning-options/